Fix project overflow issue.

--- a/css/projects.css
+++ b/css/projects.css
@@ -6,7 +6,7 @@
 
 .project {
     display: flex;
-    height: 30vh;
+    min-height: 30vh;
     margin-bottom: 3rem;
     -webkit-box-shadow: 5px 10px 40px -1px rgba(0,0,0,0.37);
     -moz-box-shadow: 5px 10px 40px -1px rgba(0,0,0,0.37);
@@ -49,7 +49,7 @@
     .project {
         flex-direction: column;
         flex-direction: column;
-        height: 90vh;
+        min-height: 90vh;
     }
 
     .project > img {
